@@ -49,88 +49,6 @@
 #define L_SET SEEK_SET
 #endif
 
-/* Do we have flock?  (BSD...) */
-
-#if HAVE_FLOCK
-
-#ifndef LOCK_SH
-#define LOCK_SH	1
-#endif
-
-#ifndef LOCK_EX
-#define LOCK_EX	2
-#endif
-
-#ifndef LOCK_NB
-#define LOCK_NB 4
-#endif
-
-#ifndef LOCK_UN
-#define LOCK_UN 8
-#endif
-
-#define UNLOCK_FILE(dbf) flock (dbf->desc, LOCK_UN)
-#define READLOCK_FILE(dbf) lock_val = flock (dbf->desc, LOCK_SH + LOCK_NB)
-#define WRITELOCK_FILE(dbf) lock_val = flock (dbf->desc, LOCK_EX + LOCK_NB)
-
-#else
-
-/* Assume it is done like System V. */
-
-#if defined(F_SETLK64) && (defined(_LARGE_FILES) || _FILE_OFFSET_BITS == 64)
-#define UNLOCK_FILE(dbf) \
-	{					\
-	  struct flock64 flock;			\
-	  flock.l_type = F_UNLCK;		\
-	  flock.l_whence = SEEK_SET;		\
-	  flock.l_start = flock.l_len = 0L;	\
-	  fcntl (dbf->desc, F_SETLK64, &flock);	\
-	}
-#define READLOCK_FILE(dbf) \
-	{					\
-	  struct flock64 flock;			\
-	  flock.l_type = F_RDLCK;		\
-	  flock.l_whence = SEEK_SET;			\
-	  flock.l_start = flock.l_len = 0L;	\
-	  lock_val = fcntl (dbf->desc, F_SETLK64, &flock);	\
-	}
-#define WRITELOCK_FILE(dbf) \
-	{					\
-	  struct flock64 flock;			\
-	  flock.l_type = F_WRLCK;		\
-	  flock.l_whence = SEEK_SET;			\
-	  flock.l_start = flock.l_len = 0L;	\
-	  lock_val = fcntl (dbf->desc, F_SETLK64, &flock);	\
-	}
-#else
-#define UNLOCK_FILE(dbf) \
-	{					\
-	  struct flock flock;			\
-	  flock.l_type = F_UNLCK;		\
-	  flock.l_whence = SEEK_SET;		\
-	  flock.l_start = flock.l_len = 0L;	\
-	  fcntl (dbf->desc, F_SETLK, &flock);	\
-	}
-#define READLOCK_FILE(dbf) \
-	{					\
-	  struct flock flock;			\
-	  flock.l_type = F_RDLCK;		\
-	  flock.l_whence = SEEK_SET;			\
-	  flock.l_start = flock.l_len = 0L;	\
-	  lock_val = fcntl (dbf->desc, F_SETLK, &flock);	\
-	}
-#define WRITELOCK_FILE(dbf) \
-	{					\
-	  struct flock flock;			\
-	  flock.l_type = F_WRLCK;		\
-	  flock.l_whence = SEEK_SET;			\
-	  flock.l_start = flock.l_len = 0L;	\
-	  lock_val = fcntl (dbf->desc, F_SETLK, &flock);	\
-	}
-#endif
-
-#endif
-
 /* Default block size.  Some systems do not have blocksize in their
    stat record. This code uses the BSD blocksize from stat. */
 
